# experimentos-ccomp

./: CMakeLists.txt  LICENSE.md
src/: otimizacao-de-tipo-numerico.c  possivel-otimizacao-de-tipo-numerico  possivel-otimizacao-de-tipo-numerico.c  possivel-otimizacao-de-tipo-numerico.gerado.c  possivel-otimizacao-de-tipo-numerico.gerado.ll
